Adicionando dependência da validação e configurando conexão com o banco de dados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.username=root
+spring.datasource.password=APA50fot!
+spring.datasource.url= jdbc:mysql://localhost:3306/controle
+spring.jpa.hibernate.ddl-auto=update
 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+server.error.include-stacktrace=on-param
