Configurando conexão com banco de dados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.username=root
-spring.datasource.password=APA50fot!
+spring.datasource.password=root
 spring.datasource.url= jdbc:mysql://localhost:3306/controle
 spring.jpa.hibernate.ddl-auto=update
 
